@@ -1,3 +1,3 @@
-EBUILD eselect-emacs-9999.ebuild 1053 RMD160 bfe5618a7ef680a065b5b06cf88f32f5b07a7dbc SHA1 5bcdd338f6c9f9d0ff5aa850940e77cd857f8641 SHA256 9779d553f32dd091560b7c5d7e269cd10edae65794f1bcd67b036aace4ffba39
-MISC ChangeLog 271 RMD160 922c56b52429fbfe11be3bbf367f4f75edeec1cf SHA1 ec5e39ebd2164f289095b3362f1b23217da13f59 SHA256 aa47790b9b8221d35753fcf4e634629758a7ad9c00c8f3eac0df16f306c7e2db
+EBUILD eselect-emacs-9999.ebuild 1030 RMD160 df344413eab1b5361cbb9cecf3e7f5f2ba24c2bf SHA1 2e15000188d2a73cd213ee86193c52f7114f539b SHA256 bc53dedf1aa89cbba322bdc57df73f4ce6a979c7b838b676da49566a77c7f440
+MISC ChangeLog 395 RMD160 2e6afc6de283b21b9892b50b6b0c4d648ee251a3 SHA1 23ebc48b6cab4540edd8f7848da0d0050e32faee SHA256 d720211a00c5cddd4da704f4fb52401197e4cece678ec40b0c196276a2ff30f7
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
