@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 May 2008; Ulrich Mueller <ulm@gentoo.org> eselect-emacs-9999.ebuild:
+  Move creation of etags.eselect to src_compile.
+
 *eselect-emacs-9999 (30 Apr 2008)
 
   30 Apr 2008; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
